# browserx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml  release.yml
Formula/: browserx.rb
crates/browserx-cli/: Cargo.toml
crates/browserx-cli/src/: main.rs
crates/browserx-cli/src/commands/: browsers.rs  get.rs  health.rs  mod.rs  vault.rs
crates/browserx-cli/src/output/: mod.rs
crates/browserx-core/: Cargo.toml
crates/browserx-core/src/: error.rs  lib.rs  types.rs
crates/browserx-core/src/platform/: mod.rs
crates/browserx-core/src/providers/: firefox.rs  inline.rs  mod.rs  safari.rs
crates/browserx-core/src/providers/chromium/: crypto.rs  mod.rs  paths.rs  sqlite.rs
crates/browserx-core/src/util/: epoch.rs  host_match.rs  mod.rs  origin.rs
crates/browserx-vault/: Cargo.toml
crates/browserx-vault/src/: lib.rs
