[workspace]
resolver = "2"
members = [
    "crates/browserx-core",
    "crates/browserx-cli",
    "crates/browserx-vault",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/justinhuangcode/browserx"
authors = ["Justin Huang"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto (RustCrypto family)
aes = "0.8"
cbc = "0.1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha1 = "0.10"
hmac = "0.12"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Filesystem & paths
dirs = "6"
tempfile = "3"

# URL parsing
url = "2"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Base64
base64 = "0.22"

# Secure memory
zeroize = { version = "1", features = ["derive"] }

# Encrypted storage
age = "0.11"
chacha20poly1305 = "0.10"

# Internal crates
browserx-core = { path = "crates/browserx-core" }
browserx-vault = { path = "crates/browserx-vault" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
