[package]
name = "browserx-core"
description = "Core library for extracting browser cookies across platforms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
aes-gcm = { workspace = true }
pbkdf2 = { workspace = true }
sha1 = { workspace = true }
hmac = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tokio = { workspace = true }
