[package]
name = "browserx-vault"
description = "Encrypted local cookie storage vault for browserx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
zeroize = { workspace = true }
browserx-core = { workspace = true }
